Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -251,7 +251,7 @@
         display: none;
     }
     .info-panel {
-        padding-top: 55px;
+        padding-top: 100px;
     }
     .call-button {
         height: 100px;
